--- a/src/style.css
+++ b/src/style.css
@@ -17,3 +17,144 @@ img {
 }
 
 /* Add your styles below */
+
+body {
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  background-color: #000000;
+  color: #333;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px;
+  background-color: #000000;
+  border-bottom: 1px solid #ccc;
+}
+
+h1 {
+  color: #fff;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+#logo {
+  width: 120px;
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+nav a:hover {
+  text-decoration: underline;
+  transform: scale(1.05);
+  transition: all 0.2s ease-in-out;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  background-color: #f4f4f4;
+  max-width: 1200px;
+  gap: 20px;
+}
+
+#playlists {
+  display: grid;
+  gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  flex: 1;
+}
+
+.playlists-card {
+  display: flex;
+  background-color: #fff;
+  gap: 15px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.playlists-card img {
+  border-radius: 4px;
+  width: 100px;
+  height: 100px;
+  justify-content: left;
+}
+
+.playlists-card h3 {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+#albums {
+  display: flex;
+  gap: 15px;
+  overflow-y: scroll;
+}
+
+.album-card {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  text-align: left;
+  min-width: 180px;
+  max-width: 180px;
+  overflow-x: scroll;
+}
+
+.album-card img {
+  border-radius: 4px;
+  width: 100%;
+  height: 100%;
+  justify-content: left;
+}
+
+.album-card h3 {
+  display: flex;
+  align-items: center;
+}
+
+.album-card p {
+  color: #666;
+  font-size: 0.9rem;
+}
+
+.album-card:hover,
+.playlists-card:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transform: scale(1.05);
+  transition: all 0.2s ease-in-out;
+}
+
+footer {
+  text-align: center;
+  padding: 20px;
+  background-color: #000000;
+  color: #fff;
+}
+
+@media (min-width: 768px) {
+  nav {
+    flex-direction: row;
+  }
+}
